iOS overflow bug.

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -49,6 +49,7 @@ h1 {
 	font-family: housecasual;
 	position: relative;
 	line-height: 1;
+	overflow: hidden;
 	
 	background: #f8d3bb;
 	background: -moz-linear-gradient(45deg, #f8d3bb 0%, #e88791 74%, #8b5578 100%);
